--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
